// Copyright 2025 Adobe. All rights reserved.
// This file is licensed to you under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License. You may obtain a copy
// of the License at http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under
// the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
// OF ANY KIND, either express or implied. See the License for the specific language
// governing permissions and limitations under the License.

syntax = "proto3";

package aquarium.v2;

import "google/protobuf/timestamp.proto";
import "aquarium/v2/rbac.proto";

option go_package = "github.com/adobe/aquarium-fish/lib/rpc/gen/proto/aquarium/v2;aquariumv2";

// User service handles user management operations
service UserService {
  // Get current user information
  rpc GetMe(UserServiceGetMeRequest) returns (UserServiceGetMeResponse) {
   option (access_control) = {}; // Available for logged-in users
  }
  
  // Get list of users
  rpc List(UserServiceListRequest) returns (UserServiceListResponse) {}
  
  // Get user by name
  rpc Get(UserServiceGetRequest) returns (UserServiceGetResponse) {}
  
  // Create new user
  rpc Create(UserServiceCreateRequest) returns (UserServiceCreateResponse) {}
  
  // Update existing user
  rpc Update(UserServiceUpdateRequest) returns (UserServiceUpdateResponse) {}
  
  // Delete user
  rpc Delete(UserServiceDeleteRequest) returns (UserServiceDeleteResponse) {}
  
  // Assign roles to user
  rpc AssignRoles(UserServiceAssignRolesRequest) returns (UserServiceAssignRolesResponse) {}
}

// User represents a user in the system
message User {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  repeated string roles = 4;
}

// UserWithPassword includes password for create/update operations
message UserWithPassword {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string password = 4;
  repeated string roles = 5;
}

message UserServiceGetMeRequest {}

message UserServiceGetMeResponse {
  bool status = 1;
  string message = 2;
  User data = 3;
}

message UserServiceListRequest {}

message UserServiceListResponse {
  bool status = 1;
  string message = 2;
  repeated User data = 3;
}

message UserServiceGetRequest {
  string name = 1;
}

message UserServiceGetResponse {
  bool status = 1;
  string message = 2;
  User data = 3;
}

message UserServiceCreateRequest {
  string name = 1;
  optional string password = 2;
  repeated string roles = 3;
}

message UserServiceCreateResponse {
  bool status = 1;
  string message = 2;
  UserWithPassword data = 3;
}

message UserServiceUpdateRequest {
  string name = 1;
  optional string password = 2;
  repeated string roles = 3;
}

message UserServiceUpdateResponse {
  bool status = 1;
  string message = 2;
  UserWithPassword data = 3;
}

message UserServiceDeleteRequest {
  string name = 1;
}

message UserServiceDeleteResponse {
  bool status = 1;
  string message = 2;
}

message UserServiceAssignRolesRequest {
  string name = 1;
  repeated string roles = 2;
}

message UserServiceAssignRolesResponse {
  bool status = 1;
  string message = 2;
} 

